--- a/packages/app/s-dashboard/src/css/sugar.css
+++ b/packages/app/s-dashboard/src/css/sugar.css
@@ -16,6 +16,15 @@
   fa:desktop:desktop
   fa:arrows-left-right:wide
   fa:equals:dwarf
+  fa:hamsa:prod
+  fa:hourglass-start:preprod
+  fab:dev:dev
+  fa:microscope:staging
+  fa:house-chimney-window:website
+  fa:lock:admin
+  fa:temperature-low:low
+  fa:temperature-half:medium
+  fa:temperature-high:high
 );
 
 /* fa:user:user
