--- a/packages/app/s-dashboard/src/css/partials/header.css
+++ b/packages/app/s-dashboard/src/css/partials/header.css
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     height: 80px;
-    margin-block-end: sugar.margin(50);
+    /* margin-block-end: sugar.margin(50); */
     /* @sugar.border.radius (10); */
     @sugar.depth (100);
 
