--- a/packages/app/s-dashboard/src/js/partials/s-dashboard-browserstack-component/s-dashboard-browserstack-component.css
+++ b/packages/app/s-dashboard/src/js/partials/s-dashboard-browserstack-component/s-dashboard-browserstack-component.css
@@ -11,6 +11,7 @@
     }
 
     .ck-list__item {
-        padding: sugar.padding(20);
+        text-align: right;
+        padding: sugar.padding(30);
     }
 }
