--- a/packages/app/s-dashboard/src/js/partials/s-dashboard-browserstack-component/s-dashboard-browserstack-component.css
+++ b/packages/app/s-dashboard/src/js/partials/s-dashboard-browserstack-component/s-dashboard-browserstack-component.css
@@ -11,7 +11,7 @@
     }
 
     .ck-list__item {
-        text-align: right;
+        text-align: center;
         padding: sugar.padding(30);
     }
 }
