--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/features/partials/opensource.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/features/partials/opensource.css
@@ -16,9 +16,8 @@
 }
 
 #features-opensource {
-    /* .__illustration {
-        animation: 3s opensource-animation infinite;
-    } */
+    .__illustration {
+    }
 
     .__box {
         position: relative;
