--- a/packages/components/s-color-picker-component/index.html
+++ b/packages/components/s-color-picker-component/index.html
@@ -12,15 +12,16 @@
             import { define } from './src/js/exports.ts';
             define();
         </script>
-        <s-color-picker id="okfwioejfiwuehf" save-state>
+        <!-- <s-color-picker id="okfwioejfiwuehf" save-state>
             <input type="text" />
-        </s-color-picker>
+        </s-color-picker> -->
 
         <s-color-picker
             mount-when="nearViewport"
             id="okfwioejfiwueeeeehf"
             update-input="pointerup"
             save-state
+            format="hexa"
         >
             <input type="text" />
         </s-color-picker>
